--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/enzyme/zeus#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
+    "gulp-strip-css-comments": "^1.2.0",
     "normalize.css": "^4.1.1"
   }
 }
