--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zeus",
+  "name": "zeus-grid",
   "version": "0.0.1",
   "description": "A BEM flavoured, mobile first flexbox grid framework.",
   "repository": {
