--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/enzyme/zeus/issues"
   },
   "homepage": "https://github.com/enzyme/zeus#readme",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^6.4.0",
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.1.7",
@@ -26,6 +26,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-strip-css-comments": "^1.2.0",
+    "normalize.css": "^4.1.1"
+  },
+  "dependencies": {
     "normalize.css": "^4.1.1"
   }
 }
